--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,11 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#1b1b1b" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta
+      name="description"
+      content="Web app like Telegram with the ability to send and receive voice messages and photos and all other facilities with a beautiful and pleasant design"
+    />
+    <meta name="author" content="abas ghamilooe | عباس غمیلویی" />
     <link rel="apple-touch-icon" href="logo.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
